--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,12 @@ jobs:
       - name: Check style
         shell: bash 
         run: |
+          chmod +x deployment/scripts/*.sh
           chmod +x deployment/lint.sh
           ./deployment/lint.sh
       - name: Run unit tests
         shell: bash
         run: |
+          chmod +x deployment/scripts/*.sh
           chmod +x deployment/test.sh
           ./deployment/test.sh
