--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,21 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '7.0.x'
+          dotnet-version: '8.0.x'
       - name: Install necessary packages
         shell: bash 
         run: |
           cd artshop.client
           npm i
+      - name: Check style
+        shell: bash 
+        run: |
+          chmod +x deployment/scripts/*.sh
+          chmod +x deployment/lint.sh
+          ./deployment/lint.sh
       - name: Run unit tests
         shell: bash
         run: |
           chmod +x deployment/scripts/*.sh
           chmod +x deployment/test.sh
-          ./deployment/test.sh
+          ./deployment/test.sh ALL
