--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,12 +19,12 @@ jobs:
       - name: Check style
         shell: bash 
         run: |
-          chmod +x deployment/scripts/*.sh
-          chmod +x deployment/lint.sh
-          ./deployment/lint.sh
+          chmod +x script/helpers/*.sh
+          chmod +x script/lint.sh
+          ./script/lint.sh
       - name: Run unit tests
         shell: bash
         run: |
-          chmod +x deployment/scripts/*.sh
-          chmod +x deployment/test.sh
-          ./deployment/test.sh ALL
+          chmod +x script/helpers/*.sh
+          chmod +x script/test.sh
+          ./script/test.sh ALL
