Switched to SQLite DB

--- a/artshop.server/server/appsettings.json
+++ b/artshop.server/server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "filename=artshoptest.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
